# ytdl-sub

./: .gitignore  .pylintrc  .readthedocs.yaml  Makefile  README.md  TODO.md  config.yaml  dev-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  subscriptions.yaml  tox.ini  ytdl-sub.spec
.github/: dependabot.yaml
.github/workflows/: build_lint_test.yaml  ci-windows.yaml  ci.yaml  lint.yml  linter.yaml  linter.yml  package-gui.yaml  package-ubuntu.yaml  package.yaml  pypi.yaml  release.yaml
.ytdl-sub-downloads/pz/: UCcRSMoQqXc_JrBZRHDFGbqA.info.json
docker/: Dockerfile  Dockerfile.gui  Dockerfile.minimal  Dockerfile.ubuntu  README.md  docker-compose.yml
docker/root/config/: subscriptions.yaml
docker/root/custom-cont-init.d/: defaults  defaults-gui  defaults-headless
docker/root/defaults/: config.yaml  cron  cron_script  cron_wrapper  cron_wrapper.gui  cron_wrapper.headless  subscriptions.yaml
docker/testing/: Makefile  docker-compose.yml
docs/: conf.py  config.rst  deprecation_notices.rst  examples.rst  faq.rst  getting_started.rst  index.rst  install.rst  presets.rst  usage.rst
docs/_html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_html/.doctrees/: environment.pickle  index.doctree
docs/_html/_sources/: index.rst.txt
docs/_html/source/: modules.html  setup.html  tests.html  tests.unit.entries.html  tests.unit.html  tests.unit.validators.html  ytdl_subscribe.cli.html  ytdl_subscribe.downloaders.html  ytdl_subscribe.entries.html  ytdl_subscribe.html  ytdl_subscribe.subscriptions.html  ytdl_subscribe.validators.base.html  ytdl_subscribe.validators.config.config_options.html  ytdl_subscribe.validators.config.html  ytdl_subscribe.validators.config.metadata_options.html  ytdl_subscribe.validators.config.output_options.html  ytdl_subscribe.validators.config.overrides.html  ytdl_subscribe.validators.config.source_options.html  (+3 more)
docs/config/: index.rst
docs/examples/: kodi_tv_shows.rst
docs/getting_started/: index.rst  install.rst  usage_ideas.rst
docs/guides/: getting_started.rst  index.rst
docs/source/: conf.py  config.rst  debugging.rst  deprecation_notices.rst  index.rst  introduction.rst  modules.rst  presets.rst  requirements.txt  usage.rst  ytdl_subscribe.cli.rst  ytdl_subscribe.config.rst  ytdl_subscribe.downloaders.rst  ytdl_subscribe.entries.rst  ytdl_subscribe.entries.variables.rst  ytdl_subscribe.plugins.rst  ytdl_subscribe.rst  ytdl_subscribe.subscriptions.rst  ytdl_subscribe.utils.rst  ytdl_subscribe.validators.config.config_options.rst  ytdl_subscribe.validators.config.metadata_options.rst  ytdl_subscribe.validators.config.output_options.rst  ytdl_subscribe.validators.config.overrides.rst  ytdl_subscribe.validators.config.rst  ytdl_subscribe.validators.config.source_options.rst  ytdl_subscribe.validators.config.ytdl_options.rst  ytdl_subscribe.validators.rst
examples/: README.md  bandcamp_config.yaml  bandcamp_subscriptions.yaml  kodi_music_videos_config.yaml  kodi_music_videos_subscriptions.yaml  kodi_tv_shows_config.yaml  kodi_tv_shows_subscriptions.yaml  music_audio_config.yaml  music_audio_from_videos.yaml  music_audio_from_videos_subscriptions.yaml  music_audio_subscriptions.yaml  music_subscriptions.yaml  music_video_subscriptions.yaml  music_videos_config.yaml  music_videos_subscriptions.yaml  soundcloud_albums_config.yaml  soundcloud_discography_config.yaml  tv_show_config.yaml  tv_show_subscriptions.yaml  youtube_extract_and_tag_audio.yaml
examples/advanced/: music_video_config.yaml  tv_show_config.yaml  tv_show_subscriptions.yaml
kubernetes/: README.md  cronjob.yaml  kustomization.yaml  volumes.yaml
src/ytdl_sub/: __init__.py  main.py
src/ytdl_sub/cli/: main.py  (+5 more)
tests/: __init__.py  conftest.py  expected_download.py  expected_transaction_log.py  resources.py
tests/e2e/: conftest.py  expected_download.py  expected_transaction_log.py  test_debug_repro.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_keep_max_files_sort.py
tmp/tom_petty/: PLoopXDarluPBnuxs4PTC55Sc_2ShAXC0i.info.json
tools/: docs  linter  run_linter  test
tools/docgen/: configuration.py  docgen.py  entry_variables.py  functions.py  override_variables.py  plugins.py  scripting_functions.py  static_variables.py  test.py  utils.py
ytdl_subscribe/: __init__.py  enums.py  main.py  parse.py  subscriptions.py
ytdl_subscribe/cli/: subscription_args_parser.py
ytdl_subscribe/config/: config_file.py  config_file_validator.py  config_options_validator.py  download_strategy_validators.py  output_options_validator.py  overrides_validator.py  preset.py  preset_class_mappings.py  preset_options.py  preset_validator.py  subscription.py  subscription_validator.py  ytdl_options_validator.py
ytdl_subscribe/downloaders/: downloader.py  soundcloud_downloader.py  youtube_downloader.py
ytdl_subscribe/entries/: base_entry.py  entry.py  soundcloud.py  youtube.py
ytdl_subscribe/plugins/: convert_thumbnail.py  music_tags.py  nfo_tags.py  output_directory_nfo_tags.py  plugin.py
ytdl_subscribe/subscriptions/: soundcloud.py  subscription.py  youtube.py
ytdl_subscribe/utils/: enums.py  formatter_validator.py
ytdl_subscribe/validators/: date_range_validator.py  exceptions.py  strict_dict_validator.py  string_datetime.py  string_formatter_validators.py  string_select_validator.py  validators.py
ytdl_subscribe/ytdl_additions/: enhanced_download_archive.py
(+1163 files in other folders)
