[metadata]
name = ytdl-sub
version = attr:ytdl_sub.version.__version__
author = Jesse Bannon
description = ytdl automated with metadata creation
author_email = use_github_issues@nope.com
url = https://github.com/jmbannon/ytdl-sub
license = GNUv3
platforms = Unix
classifiers =
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Video
    License :: Public Domain
    Environment :: Console
    Programming Language :: Python :: 3.10

[options.entry_points]
console_scripts =
    ytdl-sub = ytdl_sub.main:main

[options]
package_dir =
    = src
install_requires =
    argparse==1.4.0
    dicttoxml==1.7.4
    mergedeep==1.3.4
    music-tag==0.4.3
    Pillow==9.1.0
    PyYAML==6.0
    yt-dlp==2022.4.8

[options.extras_require]
test =
    coverage==6.3.2
    pytest==7.1.1
lint =
    black==22.3.0
    isort==5.10.1
    pylint==2.13.5
docs =
    sphinx==4.5.0
    sphinx-rtd-theme==1.0.0
