[metadata]
name = ytdl-sub
version = attr:ytdl_sub.__pypi_version__
author = Jesse Bannon
description = Automate downloading and metadata generation with YoutubeDL
long_description = file: README.md
long_description_content_type= text/markdown
author_email = use_github_issues@nope.com
url = https://github.com/jmbannon/ytdl-sub
license = GNUv3
platforms = Unix
classifiers =
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Video
    License :: Public Domain
    Environment :: Console
    Programming Language :: Python :: 3.10

[options.entry_points]
console_scripts =
    ytdl-sub = ytdl_sub.main:main

[options]
package_dir =
    = src
packages=find:

install_requires =
    yt-dlp==2023.3.4
    argparse==1.4.0
    mergedeep==1.3.4
    mediafile==0.10.1
    PyYAML==6.0

[options.package_data]
* = *.yaml

[options.packages.find]
where=src

[options.extras_require]
test =
    coverage[toml]==6.3.2
    pytest==7.1.1
lint =
    black==22.3.0
    isort==5.10.1
    pylint==2.13.5
    pydocstyle[toml]==6.1.1
docs =
    sphinx==4.5.0
    sphinx-rtd-theme==1.0.0
build =
    build
    twine
    pyinstaller

